--- a/views/demo_student.xml
+++ b/views/demo_student.xml
@@ -11,7 +11,7 @@
         </record>
         <record id="demo_student_2" model="school.management.student">
             <field name="er_num">ENR0002</field>
-            <field name="name">Raju</field>
+            <field name="name">Raju Rastogi</field>
             <field name="phone_number">9876543210</field>         
             <field name="dob">2000-03-04</field>
             <field name="age">23</field>
@@ -19,7 +19,7 @@
         </record>
         <record id="demo_student_3" model="school.management.student">
             <field name="er_num">ENR0003</field>
-            <field name="name">Shyam</field>
+            <field name="name">Shyamlal</field>
             <field name="phone_number">5678901234</field>           
             <field name="dob">2000-03-05</field>
             <field name="age">23</field>
