--- a/school_management/views/student_details.xml
+++ b/school_management/views/student_details.xml
@@ -122,11 +122,11 @@
                 <field name="standard" optional="show" />
                 <field name="gender" optional="show" />
                 <field name="division" optional="show" />
-                <field name="stream" optional="show" />
-                <field name="fee_status" optional="show" />
-                <field name="roll_number" optional="show" />
+                <!-- <field name="stream" optional="show" /> -->
+                <!-- <field name="fee_status" optional="show" /> -->
+                <!-- <field name="roll_number" optional="show" /> -->
                 <field name="enr_number" optional="show" />
-                <field name="class_teacher" optional="show" />
+                <!-- <field name="class_teacher" optional="show" />
                 <field name="address" optional="show" />
                 <field name="phone_number" optional="show" />
                 <field name="dob" optional="show" />
@@ -134,7 +134,7 @@
                 <field name="parent_name" optional="show" />
                 <field name="relation" optional="show" />
                 <field name="parent_phone_number" optional="show" />
-                <field name="email" optional="show" />
+                <field name="email" optional="show" /> -->
             </tree>
         </field>
     </record>
