--- a/customized_website/views/templates.xml
+++ b/customized_website/views/templates.xml
@@ -3,68 +3,126 @@
   <data>
     <template id="customized_website.custom_page_template" name="Custom Page">
       <t t-call="website.layout">
-        <div class="container">
-          <header>
-            <h1>Welcome to Custom Page</h1>
+        <section class="container" id="custom_sec">
+          <header class="text-center">
+            <h1 class="text-primary">Welcome to Custom Page</h1>
           </header>
-      
-          <form class="secondary" id="form_result" method="POST" style="border: 2px solid #000; padding: 20px;">
-            <div class="form-group" style="margin-bottom: 10px;">
-              <label class="form-label" for="name">Name:</label>
-              <input required=""  id="name" placeholder="Enter your name" class="form-input" type="text" />
-            </div>
-            <div class="form-group" style="margin-bottom: 10px;">
-              <label class="form-label" for="email">Email:</label>
-              <input required="" placeholder="Enter your email" class="form-input" name="email"  id="email" type="text" />
-            </div>
-            <div class="form-group" style="margin-bottom: 10px;">
-              <label class="form-label" for="message">Message:</label>
-              <textarea required="" placeholder="Enter your message" class="form-input" name="message" id="message"></textarea>
-            </div>
-            <button type="button" id="submit_button" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-     
-      <section class="s_image_gallery o_slideshow s_image_gallery_show_indicators s_image_gallery_indicators_rounded pt24" data-vcss="001" data-columns="3" style="height: 500px; overflow: hidden;">
-        <div class="container">
-          <div id="slideshow_sample" class="carousel slide" data-bs-ride="carousel"
-            data-bs-interval="0" style="margin: 0 12px;">
-            <div class="carousel-inner" style="padding: 0;">
-              <div class="carousel-item active">
-                <img class="img img-fluid d-block" src="customized_website/static/src/img/img1.jpg"
-                  data-name="Image" data-index="0" />
+
+          <t t-block="custom_slider">
+            <div
+              class="s_image_gallery o_slideshow s_image_gallery_show_indicators s_image_gallery_indicators_rounded pt24"
+              data-vcss="001" data-columns="3" style="height: 500px; overflow: hidden;">
+              <div id="slideshow_sample" class="carousel slide" data-bs-ride="carousel"
+                data-bs-interval="0" style="margin: 0 12px;">
+                <div class="carousel-inner" style="padding: 0;">
+                  <div class="carousel-item active">
+                    <img class="img img-fluid d-block"
+                      src="customized_website/static/src/img/img1.jpg"
+                      data-name="Image" data-index="0" />
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img img-fluid d-block"
+                      src="customized_website/static/src/img/img2.jpg"
+                      data-name="Image" data-index="1" />
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img img-fluid d-block"
+                      src="customized_website/static/src/img/img3.jpg"
+                      data-name="Image" data-index="2" />
+                  </div>
+                  <div class="carousel-item">
+                    <img class="img img-fluid d-block"
+                      src="customized_website/static/src/img/img4.jpg"
+                      data-name="Image" data-index="3" />
+                  </div>
+                </div>
+                <ul class="carousel-indicators">
+                  <li class="o_indicators_left text-center d-none" aria-label="Previous"
+                    title="Previous">
+                    <i class="fa fa-chevron-left" />
+                  </li>
+                  <li data-bs-target="#slideshow_sample" data-bs-slide-to="0"
+                    style="background-image: url(customized_website/static/src/img/img1.jpg)"
+                    class="active" />
+                  <li data-bs-target="#slideshow_sample" data-bs-slide-to="1"
+                    style="background-image: url(customized_website/static/src/img/img2.jpg)" />
+                  <li data-bs-target="#slideshow_sample" data-bs-slide-to="2"
+                    style="background-image: url(customized_website/static/src/img/img3.jpg)" />
+                  <li data-bs-target="#slideshow_sample" data-bs-slide-to="3"
+                    style="background-image: url(customized_website/static/src/img/img4.jpg)" />
+                  <li class="o_indicators_right text-center d-none" aria-label="Next" title="Next">
+                    <i class="fa fa-chevron-right" />
+                  </li>
+                </ul>
+                <a class="carousel-control-prev o_we_no_overlay o_not_editable"
+                  href="#slideshow_sample" data-bs-slide="prev" aria-label="Previous"
+                  title="Previous">
+                  <span class="fa fa-chevron-left fa-2x text-white" />
+                  <span class="visually-hidden">Previous</span>
+                </a>
+                <a class="carousel-control-next o_we_no_overlay o_not_editable"
+                  href="#slideshow_sample" data-bs-slide="next" aria-label="Next" title="Next">
+                  <span class="fa fa-chevron-right fa-2x text-white" />
+                  <span class="visually-hidden">Next</span>
+                </a>
               </div>
-              <div class="carousel-item">
-                <img class="img img-fluid d-block" src="customized_website/static/src/img/img2.jpg"
-                  data-name="Image" data-index="1" />
+            </div>
+          </t>
+          <t t-block="custom_form">
+            <form class="secondary-background" id="form_result" method="POST"
+              style="padding: 10px;">
+              <div class="form-group" style="margin-bottom: 10px;">
+                <label class="form-label text-primary" for="name">Name:</label>
+                <input required="" id="name" placeholder="Enter your name"
+                  class="form-control me-sm-2" type="text" />
+              </div>
+              <div class="form-group" style="margin-bottom: 10px;">
+                <label class="form-label text-primary" for="email">Email:</label>
+                <input required="" placeholder="Enter your email" class="form-control me-sm-2"
+                  name="email" id="email" type="text" />
+              </div>
+              <div class="form-group" style="margin-bottom: 10px;">
+                <label class="form-label text-primary">Profession:</label>
+                <select class="form-select col-8" name="profession" id="profession">
+                  <option>Business</option>
+                  <option selected="selected">Service</option>
+                  <option>No Work</option>
+                </select>
+              </div>
+              <div class="form-group" style="margin-bottom: 10px;">
+                <label class="form-label text-primary" for="message">Message:</label>
+                <textarea required="" placeholder="Enter your message"
+                  class="form-control me-sm-2" name="message" id="message"></textarea>
+              </div>
+              <button type="button" id="submit_button"
+                class="btn btn-outline-success my-2 my-sm-0" style="width : 100%">Submit</button>
+            </form>
+          </t>
+
+          <t t-block="custom_popup">
+            <div class="modal fade" id="exampleModal" tabindex="-1"
+              aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                      aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body" id="popup_body">
+                    ...
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" id="sign_button">Save changes</button>
+                  </div>
+                </div>
               </div>
             </div>
-            <ul class="carousel-indicators">
-              <li class="o_indicators_left text-center d-none" aria-label="Previous"
-                title="Previous">
-                <i class="fa fa-chevron-left" />
-              </li>
-              <li data-bs-target="#slideshow_sample" data-bs-slide-to="0"
-                style="background-image: url(customized_website/static/src/img/img1.jpg)"
-                class="active" />
-              <li data-bs-target="#slideshow_sample" data-bs-slide-to="1"
-                style="background-image: url(customized_website/static/src/img/img2.jpg)" />
-              <li class="o_indicators_right text-center d-none" aria-label="Next" title="Next">
-                <i class="fa fa-chevron-right" />
-              </li>
-            </ul>
-            <a class="carousel-control-prev o_we_no_overlay o_not_editable" href="#slideshow_sample" data-bs-slide="prev" aria-label="Previous" title="Previous">
-              <span class="fa fa-chevron-left fa-2x text-white" />
-              <span class="visually-hidden">Previous</span>
-            </a>
-            <a class="carousel-control-next o_we_no_overlay o_not_editable" href="#slideshow_sample" data-bs-slide="next" aria-label="Next" title="Next">
-              <span class="fa fa-chevron-right fa-2x text-white" />
-              <span class="visually-hidden">Next</span>
-            </a>
-          </div>
-        </div>
-      </section>
-    </t>
+          </t>
+        </section>
+
+      </t>
     </template>
   </data>
 </odoo>
