--- a/customized_website/views/views.xml
+++ b/customized_website/views/views.xml
@@ -9,6 +9,7 @@
                 <field name="name" />
                 <field name="email" />
                 <field name="message" />
+                <field name="profession"/>
             </tree>
         </field>
     </record>
