added back button

--- a/school_management/wizard/create_school_info_view.xml
+++ b/school_management/wizard/create_school_info_view.xml
@@ -11,7 +11,7 @@
                     </group>
                 </sheet>
                 <footer>
-                    <button string="Cancel" class="btn-warning" special="cancel"/>
+                    <button string="Back" class="btn-warning" special="cancel"/>
                     <button name="cancel_admission" string="Cancel Admission" type="object" class="btn-danger"/>
                 </footer>
             </form>
